/**
 * 查询最大文档数的接口
 */
package monad.proto;

import "command.proto";

option optimize_for = SPEED;

option java_package = "monad.protocol.internal";

option java_outer_classname = "InternalFindDocProto";
/* 向Sync服务器发送同步请求 */
message InternalFindDocRequest {
  extend BaseCommand {
    required InternalFindDocRequest cmd = 107;
  }
  required string resource_name = 1;
  required int32 id = 2;
}
/* 响应同步请求，发送同步数据 */
message InternalFindDocResponse {
  extend BaseCommand {
    required InternalFindDocResponse cmd = 108;
  }
  required string resource_name = 1;
  repeated bytes json = 2;
}
