/**
 * 查询最大文档数的接口
 */
package monad.proto;

import "command.proto";

option optimize_for = SPEED;

option java_package = "monad.protocol.internal";

option java_outer_classname = "InternalMaxdocQueryProto";
/* 向Sync服务器发送同步请求 */
message MaxdocQueryRequest {
  extend BaseCommand {
    required MaxdocQueryRequest cmd = 103;
  }
  required string resource_name = 1;
}
/* 响应同步请求，发送同步数据 */
message MaxdocQueryResponse {
  extend BaseCommand {
    required MaxdocQueryResponse cmd = 104;
  }
  //资源名称
  required string resource_name = 1;
  required int64 maxdoc = 2;
}
